2004-11-02 22:55  svu

	* libxklavier/Makefile.am,
	  libxklavier/xklavier.c,
	  libxklavier/xklavier.h,
	  libxklavier/xklavier_config.c,
	  libxklavier/xklavier_config_i18n.c,
	  libxklavier/xklavier_config_xkb.c,
	  libxklavier/xklavier_dump.c,
	  libxklavier/xklavier_evt.c,
	  libxklavier/xklavier_evt_xkb.c,
	  libxklavier/xklavier_private.h,
	  libxklavier/xklavier_private_xkb.h,
	  libxklavier/xklavier_props.c,
	  libxklavier/xklavier_xkb.c: virtualizing everything (?) which
	  involves XKB directly. The VTable is introduced. So, now another
	  VTable (xmodmap) can be created, hopefully...
	* configure.in: preparing 1.11

2004-10-31 21:00  svu

	* libxklavier/xklavier_config_xkb.c:
	Fixing the xkbcomp command line. Ubercool!

2004-10-24 03:54  svu

	* libxklavier/xklavier_config.h, libxklavier/xklavier_evt.c,
	libxklavier/xklavier_util.c: fixing handling of the transparent 
	windows. Fixes some problems with metacity and Window List-based
	switching (reported by Alexander Ovcharenko).

2004-10-16 23:18  svu

	* NEWS: preparing 1.10

2004-10-11 23:38  svu

	* libxklavier/: xklavier_config.c, xklavier_config_xkb.c,
	  xklavier_private.h, xklavier_xkb.c: Introducing the envvar
	  XKL_DEBUG - I am sick of calling XklSetDebug manually

2004-10-10 23:38  svu

	* libxklavier/xklavier_config_xkb.c, libxklavier/xklavier_xkb.c,
	  tests/test_config.c, tests/test_monitor.c: The revolution is on.
	  The whole description is not compiled on the client side -
	  nothing on the server side

2004-10-04 22:51  svu

	* ChangeLog, configure.in, libxklavier/xklavier_config.h,
	  libxklavier/xklavier_config_xkb.c, tests/.cvsignore,
	  tests/test_config.c: Cleaning up some functions. BREAKING the
	  API/ABI. Hope people will not start chasing me with axes...

2004-10-04 19:31  svu

	* configure.in: 1.10 but not 1.1

2004-10-02 01:32  svu

	* NEWS, RELEASE_NOTES_1_01, RELEASE_NOTES_1_02, configure.in: a bit
	  of cleanup

2004-10-01 23:04  svu

	* NEWS: mentioning tests in the NEWS