@@ -4,7 +4,7 @@ test_config_SOURCES=test_config.c
 
 test_monitor_SOURCES=test_monitor.c
 
-AM_CFLAGS=-I$(includedir) -I$(x_includes) -I$(top_srcdir)
+AM_CFLAGS=-Wall -Werror -I$(includedir) -I$(x_includes) -I$(top_srcdir)
 
-AM_LDFLAGS=$(top_builddir)/libxklavier/libxklavier.la -lX11
+AM_LDFLAGS=$(top_builddir)/libxklavier/libxklavier.la -L$(x_libraries) -lX11
 
