@@ -1,6 +1,8 @@
 #include <config.h>
 #include <stdio.h>
 #include <unistd.h>
+#include <stdlib.h>
+#include <string.h>
 #include <X11/Xlib.h>
 #include <libxklavier/xklavier.h>
 #include <libxklavier/xklavier_config.h>
