@@ -1,3 +1,12 @@
+2004-11-04 19:00  svu
+
+	* libxklavier/xklavier_config_i18n.c,
+	tests/Makefile.am,
+	tests/test_config.c,
+	tests/test_monitor.c: 64-bit compatibility patch from 
+	James Henstridge. -Wall -Werror for tests.
+
+
 2004-11-02 22:55  svu
 
 	* libxklavier/Makefile.am,
